--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Material Page</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-    <link rel="icon shortcut" type="image/ico" href="https://zc95.github.io/img/favicon%20.ico">
+    <title>技术平台 Wiki</title>
+    <link href='/static/font.css' rel="stylesheet">
+    <link rel="icon shortcut" type="image/ico" href="/icon/gitlab-favicon-192x192.png">
+    <script src="static/list.js"></script>
   </head>
   <body>
     <div id="app"></div>
