--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatiable" content="IE=edge,chrome=1">
     <title>技术平台 Wiki</title>
     <link href='/static/font.css' rel="stylesheet">
     <link rel="icon shortcut" type="image/ico" href="/icon/gitlab-favicon-192x192.png">
